# deepctl

./: .gitignore  Cargo.toml  README.md  install.sh  supported_models.txt
.cargo/: config
.github/workflows/: ci.yaml
scripts/: release.sh
src/: lib.rs  main.rs  test.rs
