[package]
name = "deepctl"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
clap = { version = "4.0", features = ["derive"] }
webbrowser = "0.8.2"
rand = "0.8.5"
reqwest = { version = "0.11.13",  features = ["blocking", "multipart"] }
dirs = "4.0.0"
linked-hash-map = "0.5.3"
version-compare = "0.1.1"
serde = { version = "1.0.148",  features = ["derive"] }
serde_yaml = "0.9.14"
serde_json = "1.0.89"
anyhow = "1.0"
thiserror = "1.0.38"
base64 = "0.20.0"

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "*", features = ["vendored"] } #https://docs.rs/openssl/0.10.34/openssl/#vendored
